# habitare

./: .env.example  .gitignore  CLAUDE.md  LICENSE  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1c75a4f9f403_initial_schema.py  3bf47ea2e383_add_vms_tables.py  7da6e1ed7cf9_add_unique_constraint_users_tenant_id_.py  89cbb0e3011e_fix_rls_policy_to_handle_empty_tenant_.py  90a37ffef55e_add_refresh_tokens.py  d999c9183826_add_row_level_security_policies.py  f45892a1d6e6_add_retry_count_to_notifications.py
app/: main.py  worker.py
app/api/: deps.py  exception_handlers.py
app/core/: config.py  database.py  jwt.py  limiter.py  security.py  ws_manager.py
app/jobs/: cleanup_tokens.py  retry_notifications.py
app/middleware/: request_id.py
app/models/: __init__.py  base.py  invitation.py  notification.py  qr_code.py  tenant.py  token.py  user.py  visit.py  visitor.py
app/schemas/: auth.py  invitation.py  notification.py  qr_code.py  tenant.py  user.py  visit.py  visitor.py
app/services/: invitation_service.py  notification_service.py  qr_service.py  visit_service.py  visitor_service.py
frontend/: global.d.ts  next.config.ts  package-lock.json  package.json  providers.tsx
frontend/app/: globals.css  layout.tsx
frontend/lib/: api.ts  auth.ts  utils.ts
frontend/tests/: api.test.ts  auth.test.ts  setup.ts  utils.test.ts
tests/: conftest.py  test_db_connection.py  test_models.py
tests/integration/: test_admin_endpoints.py  test_auth_flow.py  test_email_delivery.py  test_prereg_flow.py  test_user_management.py  (+1 more)
(+53 files in other folders)
